# point-cloud-processing

./: .clang-format  .gitignore  CMakeLists.txt  README.md  appveyor.clang.yml  appveyor.gcc.yml  appveyor.macos.yml  appveyor.msvc.yml  appveyor.ubuntu.yml  appveyor.windows.yml  appveyor.yml
benchmark/: CMakeLists.txt  algorithm_benchmark.cpp  benchmark.cpp  octree_benchmark.cpp  spatial_data_structures_benchmark.cpp
cmake/: FindSphinx.cmake  pcpConfig.cmake.in
doc/: .gitignore  CMakeLists.txt  Doxyfile.in  conf.py  index.rst  octree.md
doc/api/: algorithm.rst  common.rst  graph.rst  index.rst  io.rst  kdtree.rst  octree.rst  traits.rst
doc/intro/: index.rst
doc/user-guide/: index.rst
examples/: CMakeLists.txt  add_noise_to_point_cloud.cpp  downsample.cpp  ear.cpp  filter_point_cloud_noise_by_density.cpp  filters_example.cpp  icp_example.cpp  normals_estimation.cpp  ply.cpp  simple_example.cpp  tangent_plane_surface_reconstruction.cpp  wlop_downsample.cpp
examples/data/: cone.ply  cube.ply  detergent.ply  fandisk.ply  sphere.ply  spray.ply  stanford_bunny_normals.ply
examples/data/budda_it/: budda-back.ply  budda-front.ply  budda-left.ply  budda-right.ply
include/: axis_aligned_bounding_box.hpp  endianness.hpp  intersections.hpp  normal.hpp  obj.hpp  octree.hpp  octree_iterator.hpp  octree_node.hpp  pcp.hpp  ply.hpp  point.hpp  sphere.hpp  tokenize.hpp
include/pcp/: axis_aligned_bounding_box.hpp  endianness.hpp  intersections.hpp  knn_adjacency_list.hpp  normal.hpp  normal_traits.hpp  obj.hpp  octree.hpp  octree_iterator.hpp  octree_node.hpp  pcp.hpp  ply.hpp  point.hpp  point_traits.hpp  point_view.hpp  range_traits.hpp  sphere.hpp  tokenize.hpp  vertex.hpp
include/pcp/algorithm/: algorithm.hpp  average_distance_to_neighbors.hpp  bilateral_filter.hpp  common.hpp  compute_normals.hpp  covariance.hpp  edge_aware_upsampling.hpp  estimate_normals.hpp  estimate_tangent_planes.hpp  hierarchy_simplification.hpp  icp.hpp  point_density.hpp  random_simplification.hpp  resample_away_from_edges.hpp  surface_nets.hpp  wlop.hpp
include/pcp/common/: axis_aligned_bounding_box.hpp  common.hpp  intersections.hpp  mesh_triangle.hpp  norm.hpp  normal.hpp  plane3d.hpp  point.hpp  point_predicates.hpp  regular_grid3d.hpp  sphere.hpp  timer.hpp  vector3d.hpp  vector3d_predicates.hpp  vector3d_queries.hpp  vertex.hpp
include/pcp/common/normals/: normal.hpp  normal_estimation.hpp  plane3d.hpp  tangent_plane.hpp
include/pcp/common/points/: point.hpp  point_view.hpp  vertex.hpp
include/pcp/filter/: density_filter.hpp  filter.hpp  pass_through_filter.hpp  radius_outlier_filter.hpp  statistical_outlier_filter.hpp
include/pcp/graph/: adjacency_list.hpp  directed_adjacency_list.hpp  directed_knn_adjacency_list.hpp  graph.hpp  knn_adjacency_list.hpp  minimal_spanning_tree.hpp  minimum_spanning_tree.hpp  search.hpp  undirected_knn_adjacency_list.hpp  vertex.hpp
include/pcp/io/: endianness.hpp  io.hpp  obj.hpp  ply.hpp  tokenize.hpp
include/pcp/kdtree/: kdtree.hpp  linked_kdtree.hpp  linked_kdtree_node.hpp
include/pcp/octree/: flat_octree.hpp  flat_octree_iterator.hpp  linked_octree.hpp  linked_octree_iterator.hpp  linked_octree_node.hpp  octree.hpp  octree_iterator.hpp  octree_node.hpp
include/pcp/traits/: coordinate_map.hpp  function_traits.hpp  graph_traits.hpp  graph_vertex_traits.hpp  identity_map.hpp  index_map.hpp  iterable_traits.hpp  knn_map.hpp  knn_search_traits.hpp  normal_map.hpp  normal_traits.hpp  output_iterator_traits.hpp  plane_traits.hpp  point_map.hpp  point_traits.hpp  property_map_traits.hpp  range_neighbor_map.hpp  range_traits.hpp  signed_distance_map.hpp  traits.hpp  triangle_traits.hpp  vector3d_traits.hpp
scripts/: plot_octree_benchmark.py  visualize.py
src/: benchmark.cpp  obj.cpp  octree_deletion.cpp  octree_find.cpp  octree_insertion.cpp  octree_iterator.cpp  octree_knn.cpp  octree_range_search.cpp  ply.cpp  tokenize.cpp
test/: CMakeLists.txt  adjacency_list.cpp  custom_point.hpp  directed_adjacency_list.cpp  directed_knn_adjacency_list.cpp  minimum_spanning_tree.cpp  normal_estimation.cpp  obj.cpp  octree_deletion.cpp  octree_find.cpp  octree_insertion.cpp  octree_iterator.cpp  octree_knn.cpp  octree_range_search.cpp  plane3d.cpp  ply.cpp  static_knn_adjacency_list.cpp  tangent_plane.cpp  tokenize.cpp  undirected_knn_adjacency_list.cpp
test/algorithm/: average_distance_to_neighbors.cpp  bilateral_filter.cpp  compute_normals.cpp  edge_aware_upsampling.cpp  estimate_normals.cpp  estimate_tangent_planes.cpp  hierarchy_simplification.cpp  point_density.cpp  random_simplification.cpp  surface_nets.cpp  wlop.cpp
test/common/: aabb.cpp  normal_estimation.cpp  plane3d.cpp  tokenize.cpp
test/filter/: density_filter_apply_filter.cpp  pass_through_filter_apply_filter.cpp  radius_outlier_filter_apply_filter.cpp  statistical_outlier_filter_apply_filter.cpp
test/graph/: directed_adjacency_list.cpp  dumb_vertex.hpp  minimum_spanning_tree.cpp  search.cpp  undirected_knn_adjacency_list.cpp
test/io/: custom_point.hpp  obj.cpp  ply.cpp
test/kdtree/: iterator.cpp  kdtree_insertion.cpp  kdtree_range_search.cpp  knn.cpp
test/octree/: flat_octree_deletion.cpp  flat_octree_find.cpp  flat_octree_insertion.cpp  flat_octree_iterator.cpp  flat_octree_knn.cpp  flat_octree_range_search.cpp  octree_deletion.cpp  octree_find.cpp  octree_insertion.cpp  octree_iterator.cpp  octree_knn.cpp  octree_range_search.cpp
test/type/: property_map.cpp
